Add reflection-based event listening